[package]
name = "oscquery_debug"
version = "0.0.0-dev"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1.11.1"
clap = { version = "4", features = ["derive"] }
mdns-sd = "0.18"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "fat"
