[package]
name = "oscquery_debug"
version = "0.0.0-dev"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.5.2"
if-addrs = "0.15.0"
mdns-sd = "0.18"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"] }
rosc = "0.11.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12.0"

[profile.release]
lto = "fat"
